[newly][test] - test yaml scanner
1.pass two syntax: normal key-value and comment
2.bugs fixed

Resolving: #2